--- a/OOA-task8.5.b/OOA-task8.5.b.vcxproj
+++ b/OOA-task8.5.b/OOA-task8.5.b.vcxproj
@@ -127,6 +127,11 @@
       <FileType>CppForm</FileType>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="TimerAnimationForm.resx">
+      <DependentUpon>TimerAnimationForm.h</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
